<resources>
    <string name="app_name">T2Kao</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_category">Select a Category:</string>
    <string name="product_details">Product Details</string>
    <string name="product_name">Product Name:</string>
    <string name="product_desc">Product Description:</string>
    <string name="product_price">Product Price:</string>
    <string name="product_brand">Product Brand</string>
    <string-array name="product_category_array">
        <item>smartphones</item>
        <item>laptops</item>
        <item>skincare</item>
        <item>groceries</item>
        <item>womens-watches</item>
    </string-array>
</resources>